--- a/src/app/quote/quote.component.html
+++ b/src/app/quote/quote.component.html
@@ -56,5 +56,6 @@
         <br>
        
         <hr> 
-        <footer>copyright &nbsp;   Alice.UMULISA &nbsp; 2018  &nbsp;QuotesApp</footer>
+        <footer>copyright 2018&nbsp;  |  Alice.UMULISA &nbsp;| All Rights Reserved  &nbsp;QuotesApp</footer>
+        <!-- Copyright 2009 - 2019 | IGIHE Ltd | All Rights Reserved -->
     </div>
